--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="About page of projects of author - Tricia Sathekge"
+      content="About page on author of projects - Tricia Sathekge"
     />
     <link rel="stylesheet" href="style.css" />
     <link
@@ -25,7 +25,7 @@
       integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
       crossorigin="anonymous"
     ></script>
-    <title>About Me section of author -Tricia Sathekge</title>
+    <title>About Me - Tricia Sathekge</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -82,7 +82,7 @@
       <a
         href="mailto:notrealemail@gmail.com"
         class="email-link"
-        title="Contact Tricia Sathekge"
+        title=" Contact Tricia Sathekge"
         >notrealemail@gmail.com</a
       >
     </div>
