--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Homepage of author containing informaton of projects - Tricia Sathekge">
-    <title>My Page of author - Tricia Sathekges</title>
+    <meta name="description" content="Homepage containing authors projects and information - Tricia Sathekge">
+    <title>My Page - Tricia Sathekge</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -52,8 +52,8 @@
     <h1>Tricia Sathekge</h1>
     <h3>Front-end developer, based in South Africa</h3>
     <div class="navigation-links">
-      <a href="about.html#contact" class="contact-link" title="Contact Tricia Sathekge">Contact me</a>
-      <a href="about.html" class="about-link" title="About Tricia Sathekge">About me</a>
+      <a href="about.html#contact" class="contact-link">Contact me</a>
+      <a href="about.html" class="about-link">About me</a>
     </div>
     <div class="container">
       <div class="row">
@@ -76,6 +76,7 @@
           <a  href="index.html#nav-bar"
           class="border p-2 text-decoration-none fs-6 rounded mt-2 btn-color"
           >Launch Yoga App</a
+          
         </div>
       </div>
       <div class="row">
