--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Homepage containing authors projects and information - Tricia Sathekge">
-    <title>My Page - Tricia Sathekge</title>
+  
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -23,6 +23,7 @@
       integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
       crossorigin="anonymous"
     ></script>
+      <title>Front-end developer - Tricia Sathekge</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -52,8 +53,8 @@
     <h1>Tricia Sathekge</h1>
     <h3>Front-end developer, based in South Africa</h3>
     <div class="navigation-links">
-      <a href="about.html#contact" class="contact-link">Contact me</a>
-      <a href="about.html" class="about-link">About me</a>
+      <a href="about.html#contact" class="contact-link" title="Contact Tricia Sathekge">Contact me</a>
+      <a href="about.html" class="about-link" title="About Tricia Sathekge">About me</a>
     </div>
     <div class="container">
       <div class="row">
